# fastfiler

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
doc/: BUILD.md  IDEAS.md  USAGE.md  plan.md
doc/plugins-sample/: sdk.d.ts  sdk.js
mock/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mock/src/: App.tsx  main.tsx  mockFs.ts  store.ts  styles.css  types.ts
src/: App.tsx  FloatApp.tsx  dir-cache.ts  dock.ts  drive-util.ts  float.ts  font-list.ts  fs.ts  hotkeys.ts  icon-packs.ts  icons.ts  jobs.ts  loading-state.ts  main.tsx  path-util.ts  perf.ts  plugin-host.ts  store.ts  styles.css  templates.ts  types.ts  undo.ts  user-commands.ts  window-state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  everything.rs  file_jobs.rs  file_ops.rs  fs_service.rs  lib.rs  main.rs  ole_dnd.rs  plugin.rs  preview.rs  search.rs  shell.rs  shell_assoc.rs  templates.rs  term.rs  thumbnail.rs  user_commands.rs  watcher.rs  win_clipboard.rs  win_shell.rs
src/components/: ContextMenu.tsx  DockOverlay.tsx  DriveListView.tsx  FileList.tsx  JobsPanel.tsx  PaneTree.tsx  PanelHeader.tsx  PerfPanel.tsx  PluginPanel.tsx  PreviewPane.tsx  PromptDialog.tsx  RightDragOverlay.tsx  SearchPanel.tsx  SettingsDialog.tsx  StatusBarJobs.tsx  StatusBarToast.tsx  TerminalPanel.tsx  Thumbnail.tsx  ToastContainer.tsx  TreeView.tsx  VerticalTabs.tsx  WorkspaceTreePanel.tsx
src/dnd/: external-listen.ts  hit-test.ts  index.ts  internal-pointer.ts  perform.ts  policy.ts  resolve-dest.ts  ui-state.ts
src/file-list/: ascii-tree.ts  build-context-menu.ts  dnd.ts  file-ops.ts  name-utils.ts  resolve-dest.ts  (+2 more)
(+28 files in other folders)
