[package]
name = "fastfiler"
version = "0.1.0"
description = "FastFiler — 高速 Windows ファイラ"
authors = ["o_miz"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fastfiler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
notify = "6"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
ignore = "0.4"
regex = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = { version = "2", default-features = false, features = ["json"] }
urlencoding = "2"
portable-pty = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"
windows-implement = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_WNet",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
